borsh-derive/src/internals/deserialize/enums/snapshots/borsh_skip_tuple_variant_field-2.snap
---
source: borsh-derive/src/internals/deserialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
#[::async_trait::async_trait]
impl borsh::de::BorshDeserializeAsync for AAT {
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserializeAsync>::deserialize_reader(reader)
            .await?;
        <Self as borsh::de::EnumExtAsync>::deserialize_variant(reader, tag).await
    }
}
#[::async_trait::async_trait]
impl borsh::de::EnumExtAsync for AAT {
    async fn deserialize_variant<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            AAT::B(
                ::core::default::Default::default(),
                borsh::BorshDeserializeAsync::deserialize_reader(reader).await?,
            )
        } else if variant_tag == 1u8 {
            AAT::NegatedVariant {
                beta: borsh::BorshDeserializeAsync::deserialize_reader(reader).await?,
            }
        } else {
            return ::core::result::Result::Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        ::core::result::Result::Ok(return_value)
    }
}
