borsh-derive/src/internals/deserialize/enums/snapshots/bound_generics.snap
---
source: borsh-derive/src/internals/deserialize/enums/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
snapshot_kind: text
---
impl<K: Key, V, U> borsh::de::BorshDeserialize for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let variant_tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(
            reader,
        )?;
        let mut return_value = if variant_tag == 0u8 {
            A::B {
                x: borsh::BorshDeserialize::deserialize_reader(reader)?,
                y: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::C(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else {
            return Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}
impl<K: Key, V, U> borsh::de::EnumExt for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_variant<__R: borsh::io::Read>(
        reader: &mut __R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            A::B {
                x: borsh::BorshDeserialize::deserialize_reader(reader)?,
                y: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::C(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else {
            return Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}
