borsh-derive/src/internals/deserialize/enums/snapshots/check_deserialize_with_async_attr.snap
---
source: borsh-derive/src/internals/deserialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserialize for C<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<K: Ord, V> borsh::de::EnumExt for C<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_variant<__R: borsh::io::Read>(
        reader: &mut __R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let return_value = if variant_tag == 0u8 {
            C::C3(
                <u64 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                <u64 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            )
        } else if variant_tag == 1u8 {
            C::C4 {
                x: <u64 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                y: <ThirdParty<
                    K,
                    V,
                > as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            }
        } else {
            return ::core::result::Result::Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        ::core::result::Result::Ok(return_value)
    }
}
